Upgrade datatables and fix edit btn link overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -210,16 +210,7 @@ table.dataTable thead th, table.dataTable tfoot th {
     }
   }
 
-  .users-table{
-    overflow: hidden !important;
-    max-width: 100px !important;
-    width: 100px !important;
-  }
 
-
-  .td-limit {
-    max-width: 70px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+.btn-link{
+    text-decoration: none !important;
 }
